# stramp

./: .coveragerc  .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
src/stramp/: __init__.py  cli.py  configfile.py  docstruct.py  globalstate.py  hashing.py  orgfile.py  paths.py
src/stramp/parsers/: markdown_parser.py  org_parser.py
tests/: conftest.py  org-sample-1.txt  org-sample-2.txt  test_stramp.py
