
[metadata]
name = stramp
description = Blockchain-backed timestamp proof for structured document sections
author = Ray Burr
author-email = ryb@nightmare.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/wonkyweirdy/stramp
project-urls =
    Documentation = https://github.com/wonkyweirdy/stramp
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Programming Language :: Python
    Topic :: Utilities
    Topic :: Text Processing
    Topic :: Security :: Cryptography

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    click>=6.7
    anytree>=2.7.2
    dataclasses>=0.6 ; python_version < '3.7'
    importlib-metadata>=1.0 ; python_version < '3.8'
python_requires = >=3.6
setup_requires =
    setuptools_scm

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    click

[options.entry_points]
console_scripts =
    stramp = stramp.cli:main

[test]
extras = True

[tool:pytest]
addopts =
    --cov stramp --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py
